Fix padding on narrow screens

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -125,6 +125,13 @@
     }
 }
 
+@media (max-width: 1023px) {
+  .block-narrow {
+    padding-left: var(--f7-safe-area-left);
+    padding-right: var(--f7-safe-area-right);
+  }
+}
+
 .md .panel-visible-by-breakpoint {
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.3);
 }
